--- a/.github/workflows/test_hardware.yml
+++ b/.github/workflows/test_hardware.yml
@@ -36,15 +36,15 @@ jobs:
 
     - name: Create flash.sh
       run: |
-      	touch flash.sh
+        touch flash.sh
         chmod +x flash.sh
-      	echo > flash.sh 'echo halt > flash.jlink'
-      	echo > flash.sh 'echo r >> flash.jlink'
-      	echo > flash.sh 'echo loadfile $1 >> flash.jlink'
-      	echo > flash.sh 'echo r >> flash.jlink'
-      	echo > flash.sh 'echo go >> flash.jlink'
-      	echo > flash.sh 'echo exit >> flash.jlink'
-      	echo > flash.sh 'JLinkExe -device stm32l412kb -if swd -JTAGConf -1,-1 -speed auto -CommandFile flash.jlink'
+        echo > flash.sh "echo halt > flash.jlink"
+        echo > flash.sh "echo r >> flash.jlink"
+        echo > flash.sh "echo loadfile $1 >> flash.jlink"
+        echo > flash.sh "echo r >> flash.jlink"
+        echo > flash.sh "echo go >> flash.jlink"
+        echo > flash.sh "echo exit >> flash.jlink"
+        echo > flash.sh "JLinkExe -device stm32l412kb -if swd -JTAGConf -1,-1 -speed auto -CommandFile flash.jlink"
 
     - name: Test cdc_dual_ports
       run: |
