--- a/.github/workflows/build_arm.yml
+++ b/.github/workflows/build_arm.yml
@@ -123,9 +123,11 @@ jobs:
 
   # ---------------------------------------
   # Build all no-family (orphaned) boards
+  # disable this workflow since it is often failed randomly
   # ---------------------------------------
   build-board:
     runs-on: ubuntu-latest
+    if: false
     strategy:
       fail-fast: false
       matrix:
@@ -163,7 +165,7 @@ jobs:
   # - pico + pico-probe connected via USB
   # - pico-probe is /dev/ttyACM0
   # ---------------------------------------
-  hw-pi4-test:
+  hw-rp2040-test:
     # Limit the run to only hathach due to limited resource on RPI4
     if: github.repository_owner == 'hathach'
     needs: build-arm
@@ -183,9 +185,9 @@ jobs:
 
     - name: Create flash.sh
       run: |
-        touch flash.sh
+        echo > flash.sh 'cmdout=$(openocd -f "interface/picoprobe.cfg" -f "target/rp2040.cfg" -c "program $1 reset exit")'
+        echo >> flash.sh 'if (( $? )) ; then echo $cmdout ; fi'
         chmod +x flash.sh
-        echo > flash.sh 'openocd -f "interface/picoprobe.cfg" -f "target/rp2040.cfg" -c "program $1 reset exit"'
 
     - name: Test cdc_dual_ports
       run: |
