--- a/examples/host/cdc_msc_hid/CMakeLists.txt
+++ b/examples/host/cdc_msc_hid/CMakeLists.txt
@@ -28,17 +28,18 @@ target_include_directories(${PROJECT} PUBLIC
 # in hw/bsp/FAMILY/family.cmake for details.
 family_configure_host_example(${PROJECT})
 
-# For rp2040, un-comment to enable pico-pio-usb
-family_add_pico_pio_usb(${PROJECT})
+# For rp2040 enable pico-pio-usb
+if(FAMILY STREQUAL "rp2040")
+  family_add_pico_pio_usb(${PROJECT})
 
-# due to warnings from Pico-PIO-USB
-target_compile_options(${PROJECT} PUBLIC
-        -Wno-error=shadow
-        -Wno-error=cast-align
-        -Wno-error=cast-qual
-        -Wno-error=redundant-decls
-        -Wno-error=sign-conversion
-        -Wno-error=conversion
-        -Wno-error=sign-compare
-        -Wno-error=unused-function
-        )
+  # due to warnings from Pico-PIO-USB
+  target_compile_options(${PROJECT} PUBLIC
+          -Wno-error=shadow
+          -Wno-error=cast-align
+          -Wno-error=cast-qual
+          -Wno-error=redundant-decls
+          -Wno-error=sign-conversion
+          -Wno-error=conversion
+          -Wno-error=unused-function
+          )
+endif()
