--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -38,8 +38,7 @@ jobs:
 
     - name: Fetch deps
       run: |
-        sudo apt update && sudo apt install libc++abi-dev libc++-dev
-        fuzz_harness=$(ls -d test/fuzz/device/*/ test/fuzz/host/*/)
+        fuzz_harness=$(ls -d test/fuzz/device/*/)
         for h in $fuzz_harness
         do
           make $h get-deps
@@ -47,7 +46,7 @@ jobs:
 
     - name: Build Fuzzer
       run: |
-        fuzz_harness=$(ls -d test/fuzz/device/*/ test/fuzz/host/*/)
+        fuzz_harness=$(ls -d test/fuzz/device/*/)
         for h in $fuzz_harness
         do
           make $h all
