--- a/.github/workflows/test_hardware.yml
+++ b/.github/workflows/test_hardware.yml
@@ -3,17 +3,17 @@ name: Hardware Test
 on:
   push:
     paths:
-      - 'src'
-      - 'examples'
-      - 'lib'
-      - 'hw'
+      - 'src/**'
+      - 'examples/**'
+      - 'lib/**'
+      - 'hw/**'
   pull_request:
     branches: [ master ]
     paths:
-      - 'src'
-      - 'examples'
-      - 'lib'
-      - 'hw'
+      - 'src/**'
+      - 'examples/**'
+      - 'lib/**'
+      - 'hw/**'
 
 # Hardware in the loop (HIL)
 # Current self-hosted instance is running on an EPYC 7232 server hosted by HiFiPhile user
