--- a/.github/workflows/build_iar_arm.yml
+++ b/.github/workflows/build_iar_arm.yml
@@ -51,4 +51,7 @@ jobs:
 
     - name: Build
       #run: python3 tools/build_family.py ${{ matrix.family }}
-      run: make -j -C examples/device/cdc_msc BOARD=stm32f070rbnucleo CC=iccarm all
+      run: |
+        make -j -C examples/device/cdc_msc BOARD=stm32f070rbnucleo CC=iccarm all
+        make -j -C examples/device/cdc_msc BOARD=stm32f072disco CC=iccarm all
+        make -j -C examples/device/cdc_msc BOARD=stm32f072eval CC=iccarm all
