update stm32f1 to support iar build

--- a/.github/workflows/build_iar.yml
+++ b/.github/workflows/build_iar.yml
@@ -28,6 +28,7 @@ jobs:
         family:
         # Alphabetical order
         - 'stm32f0'
+        - 'stm32f1'
     steps:
     - name: Clean workspace
       run: |
