--- a/.github/workflows/build_iar.yml
+++ b/.github/workflows/build_iar.yml
@@ -29,6 +29,8 @@ jobs:
         # Alphabetical order
         - 'stm32f0'
         - 'stm32f1'
+        - 'stm32f4'
+        - 'stm32f7'
     steps:
     - name: Clean workspace
       run: |
