--- a/.github/workflows/build_iar.yml
+++ b/.github/workflows/build_iar.yml
@@ -7,6 +7,7 @@ on:
       - 'examples/**'
       - 'lib/**'
       - 'hw/**'
+      - '.github/workflows/build_iar.yml'
   pull_request:
     branches: [ master ]
     paths:
@@ -14,6 +15,7 @@ on:
       - 'examples/**'
       - 'lib/**'
       - 'hw/**'
+      - '.github/workflows/build_iar.yml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
