use make abspath intead of shell realpath

--- a/.github/workflows/build_win_mac.yml
+++ b/.github/workflows/build_win_mac.yml
@@ -27,6 +27,7 @@ jobs:
   # ---------------------------------------
   build-arm:
     strategy:
+      fail-fast: false
       matrix:
         os: [windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
