--- a/.github/workflows/build_iar.yml
+++ b/.github/workflows/build_iar.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Checkout submodules and dependencies
       run: |
         git submodule update --init lib/FreeRTOS-Kernel lib/lwip lib/sct_neopixel
-        python3 tools/get_dependencies.py ${{ matrix.family }}
+        python3 tools/get_family_deps.py ${{ matrix.family }}
 
     #- name: Checkout pico-sdk for rp2040
     #  if: matrix.family == 'rp2040'
