--- a/.github/workflows/build_iar.yml
+++ b/.github/workflows/build_iar.yml
@@ -30,7 +30,7 @@ jobs:
         family:
         # Alphabetical order
         # Note: bundle multiple families into a matrix since there is only one self-hosted instance can
-        # run IAR build. Too many matrix can hurt due to setup/teardown overhead. 
+        # run IAR build. Too many matrix can hurt due to setup/teardown overhead.
         - 'stm32f0 stm32f1 stm32f4 stm32f7 stm32g4 stm32h7 stm32l4'
     steps:
     - name: Clean workspace
@@ -42,10 +42,8 @@ jobs:
     - name: Checkout TinyUSB
       uses: actions/checkout@v3
 
-    - name: Checkout submodules and dependencies
-      run: |
-        git submodule update --init lib/FreeRTOS-Kernel lib/lwip
-        python3 tools/get_family_deps.py ${{ matrix.family }}
+    - name: Get Dependencies
+      run: python3 tools/get_family_deps.py ${{ matrix.family }}
 
     - name: Build
       run: python3 tools/build_family.py ${{ matrix.family }} CC=iccarm
