--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Checkout TinyUSB
       uses: actions/checkout@v3
 
+    - name: Run pre-commit
+      uses: pre-commit/action@v3.0.0
+
     - name: Run codespell
       uses: codespell-project/actions-codespell@master
 
