--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,11 +4,12 @@
 
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.4.0
     hooks:
     - id: check-yaml
     - id: trailing-whitespace
     - id: end-of-file-fixer
+    - id: forbid-submodules
 
 -   repo: local
     hooks:
