--- a/.github/workflows/build_arm.yml
+++ b/.github/workflows/build_arm.yml
@@ -50,7 +50,7 @@ jobs:
         - 'stm32f7'
         - 'stm32g4 stm32wb'
         - 'stm32h7'
-        - 'stm32l4'
+        - 'stm32l0 stm32l4'
         - 'tm4c123 xmc4000'
     steps:
     - name: Setup Python
