--- a/.github/workflows/build_arm.yml
+++ b/.github/workflows/build_arm.yml
@@ -41,11 +41,10 @@ jobs:
         - 'nrf'
         - 'ra'
         - 'rp2040'
-        - 'samd11 same5x'
-        - 'samd21'
-        - 'samd51'
+        - 'samd11 samd21'
+        - 'samd51 same5x'
         - 'saml2x'
-        - 'stm32f0 stm32f1'
+        - 'stm32f0 stm32f1 stm32f2 stm32f3'
         - 'stm32f4'
         - 'stm32f7'
         - 'stm32g4 stm32h7'
