--- a/.github/workflows/build_arm.yml
+++ b/.github/workflows/build_arm.yml
@@ -35,7 +35,7 @@ jobs:
         - 'broadcom_32bit'
         - 'imxrt'
         - 'kinetis_k32 kinetis_kl'
-        - 'lpc15 lpc18'
+        - 'lpc11 lpc15 lpc18'
         - 'lpc54 lpc55'
         - 'mm32 msp432e4'
         - 'nrf'
