--- a/.github/workflows/build_arm.yml
+++ b/.github/workflows/build_arm.yml
@@ -35,7 +35,7 @@ jobs:
         - 'broadcom_32bit'
         - 'imxrt'
         - 'kinetis_k32 kinetis_kl'
-        - 'lpc11 lpc15 lpc18'
+        - 'lpc11 lpc13 lpc15 lpc18'
         - 'lpc54 lpc55'
         - 'mm32 msp432e4'
         - 'nrf'
@@ -102,7 +102,7 @@ jobs:
       run: find examples/ -path "*stm32l412nucleo/*.elf" -exec mv {} . \;
 
     - name: Upload Artifacts for rp2040
-      if: contains(matrix.family,'rp2040') && github.repository_owner == 'hathach')
+      if: contains(matrix.family,'rp2040') && github.repository_owner == 'hathach'
       uses: actions/upload-artifact@v3
       with:
         name: rp2040
@@ -110,7 +110,7 @@ jobs:
           *.elf
 
     - name: Upload Artifacts for stm32l412nucleo
-      if: contains(matrix.family, 'stm32l4') && github.repository_owner == 'hathach')
+      if: contains(matrix.family, 'stm32l4') && github.repository_owner == 'hathach'
       uses: actions/upload-artifact@v3
       with:
         name: stm32l4
