--- a/.github/workflows/build_arm.yml
+++ b/.github/workflows/build_arm.yml
@@ -36,7 +36,7 @@ jobs:
         - 'imxrt'
         - 'kinetis_k32 kinetis_kl'
         - 'lpc11 lpc13 lpc15 lpc18'
-        - 'lpc54 lpc55'
+        - 'lpc51 lpc54 lpc55'
         - 'mm32 msp432e4'
         - 'nrf'
         - 'ra'
