--- a/hw/bsp/espressif/boards/CMakeLists.txt
+++ b/hw/bsp/espressif/boards/CMakeLists.txt
@@ -1,14 +1,8 @@
 idf_component_register(SRCS family.c
                     INCLUDE_DIRS "." "${BOARD}"
                     PRIV_REQUIRES "driver"
-                    REQUIRES freertos src led_strip)
+                    REQUIRES led_strip src tinyusb_src)
 
-# Apply board specific content
-include("${BOARD}/board.cmake")
-
-idf_component_get_property(FREERTOS_ORIG_INCLUDE_PATH freertos ORIG_INCLUDE_PATH)
 target_include_directories(${COMPONENT_TARGET} PUBLIC
-  "${FREERTOS_ORIG_INCLUDE_PATH}"
   "${TOP}/hw"
-  "${TOP}/src"
 )
