--- a/examples/device/board_test/src/CMakeLists.txt
+++ b/examples/device/board_test/src/CMakeLists.txt
@@ -1,7 +1,3 @@
 idf_component_register(SRCS "main.c"
                     INCLUDE_DIRS "."
-                    REQUIRES freertos soc tinyusb_src)
-
-target_include_directories(${COMPONENT_TARGET} PUBLIC
-    "${TOP}/hw"
-    )
+                    REQUIRES boards tinyusb_src)
