--- a/hw/bsp/espressif/boards/CMakeLists.txt
+++ b/hw/bsp/espressif/boards/CMakeLists.txt
@@ -1,8 +1,6 @@
+set(hw_dir "${CMAKE_CURRENT_LIST_DIR}/../../../")
+
 idf_component_register(SRCS family.c
-                    INCLUDE_DIRS "." "${BOARD}"
+                    INCLUDE_DIRS "." ${BOARD} ${hw_dir}
                     PRIV_REQUIRES "driver"
                     REQUIRES led_strip src tinyusb_src)
-
-target_include_directories(${COMPONENT_TARGET} PUBLIC
-  "${TOP}/hw"
-)
