add some .idea configuration

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
   - id: check-yaml
   - id: trailing-whitespace
   - id: end-of-file-fixer
+    exclude: ^.idea/
   - id: forbid-submodules
 
 - repo: https://github.com/codespell-project/codespell
