--- a/hw/bsp/espressif/components/tinyusb_src/CMakeLists.txt
+++ b/hw/bsp/espressif/components/tinyusb_src/CMakeLists.txt
@@ -27,7 +27,7 @@ idf_component_get_property(freertos_component_dir freertos COMPONENT_DIR)
 list(APPEND includes_public
     "${tusb_src}"
     # The FreeRTOS API include convention in tinyusb is different from esp-idf
-    "${freertos_component_dir}/include/freertos"
+    #"${freertos_component_dir}/include/freertos"
     )
 
 list(APPEND srcs
